--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -48,6 +49,7 @@
     </dependencies>
 
     <build>
+        <finalName>depp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
