--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,24 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
+
+      -
+        name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+
+      -
+        name: Build with maven
+        run: mvn -B package --file pom.xml
+
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+
       -
         name: Build and push
         uses: docker/build-push-action@v5
