--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,32 +8,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v4
 
-      -
-        name: Set up JDK
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
 
-      -
-        name: Build with maven
+      - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      -
-        name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+      - name: Push to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
