--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-  test:
-    needs: build
-    runs-on: 'ubuntu-latest'
 
-    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -32,7 +28,7 @@ jobs:
       - name: Build the application
         run: |
           mvn clean
-          mvn -B package --file pom.xml
+          mvn -B package -DskipTests=true --file pom.xml
 
       - name: Build docker image
         uses: docker/build-push-action@v2
