--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,6 @@ jobs:
           mvn clean
           mvn -B package -DskipTests=true --file pom.xml
 
-      - name: Build docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/gcpdepp:${{ github.sha }}
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -46,5 +38,5 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/gcpdepp:${{ github.sha }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest
 
