--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,16 @@ jobs:
       - name: Set-up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
           java-version: 17
+          architecture: x64
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Build the application
         run: |
