--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: 'ubuntu-latest'
 
     steps:
@@ -18,9 +18,9 @@ jobs:
       - name: Set-up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: 17
-          architecture: x64
+          distribution: 'temurin'
+          java-version: '17'
+#          architecture: x64
 
       - name: Cache local Maven repository
         uses: actions/cache@v2
@@ -35,18 +35,31 @@ jobs:
           mvn clean
           mvn -B package -DskipTests=true --file pom.xml
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker image to ECR
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          ECR_REPO: gcp-depp
+          IMAGE_TAG: latest
+        run: |
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+          docker build -t $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG .
+          docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG
 
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          dockerfile: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: Push to Docker Hub
+#        uses: docker/build-push-action@v5
+#        with:
+#          context: .
+#          dockerfile: Dockerfile
+#          push: true
+#          tags: ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
 #          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+
 
