--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
 
 env:
   IMAGE_TAG: latest
-  JAVA_VERSION: 17
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   REPO_NAME: ${{ github.event.repository.name }}
@@ -43,15 +42,16 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build the application
-        run: |
-          mvn clean
-          mvn -B package -DskipTests=true --file pom.xml
+        run: mvn clean install -DskipTests=true
+#        run: |
+#          mvn clean
+#          mvn -B package -DskipTests=true --file pom.xml
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: $DOCKER_USERNAME
-          password: $DOCKERHUB_TOKEN
+          password: $DOCKER_TOKEN
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v5
