--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,6 @@ on:
     branches:
       - main
 
-env:
-  IMAGE_TAG: latest
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-  REPO_NAME: ${{ github.event.repository.name }}
-  AWS_REGION: ${{ secrets.AWS_REGION }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  ECR_REPO: gcp-depp
-
-
 jobs:
   build:
     runs-on: 'ubuntu-latest'
@@ -50,8 +39,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: $DOCKER_USERNAME
-          password: $DOCKER_TOKEN
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v5
@@ -59,7 +48,7 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: $DOCKER_USERNAME/gcpdepp:$IMAGE_TAG
+          tags: ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
   #          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
 
   #      - name: Build and push Docker image to ECR
@@ -80,10 +69,10 @@ jobs:
     runs-on: [aws-ec2]
     steps:
       - name: Pull Image From DockerHub
-        run: docker pull $DOCKER_USERNAME/gcpdepp:$IMAGE_TAG
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
 
       - name: Remove Old Container
         run: docker rm -f depp-app
 
       - name: Run Docker Container
-        run: docker run -d -p 8090:8090 --name depp-app $DOCKER_USERNAME/gcpdepp:$IMAGE_TAG
+        run: docker run -d -p 8090:8090 --name depp-app ${{ secrets.DOCKER_USERNAME }}/gcpdepp:$latest
