--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,12 @@ jobs:
     container:
       image: ubuntu:latest
     steps:
+#      - name: Checkout Source
+#        uses: actions/checkout@v3
+
+      - name: Install Docker
+        uses: brew install docker
+
       - name: Pull Image From DockerHub
         run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
 
