--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,15 +42,15 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [another]
+    runs-on: another
     container:
       image: ubuntu:latest
     steps:
-#      - name: Checkout Source
-#        uses: actions/checkout@v3
+      - name: Checkout Source
+        uses: actions/checkout@v4
 
       - name: Install Docker
-        run: brew install docker
+        run: sudo snap install docker
 
       - name: Pull Image From DockerHub
         run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
