--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
     runs-on: another
     needs: build
     steps:
+      - name: Set up permissions for Docker socket
+        run: sudo chmod 666 /var/run/docker.sock
+
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
