--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,18 @@ jobs:
     runs-on: another
     needs: build
     steps:
-      - name: Set up permissions for Docker socket
-        run: sudo chmod 666 /var/run/docker.sock
-
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Pull Image From DockerHub
-        run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
+#      - name: Set up permissions for Docker socket
+#        run: sudo chmod 666 /var/run/docker.sock
+#
+#      - name: Login to Docker Hub
+#        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+#
+#      - name: Pull Image From DockerHub
+#        run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
+      - name: Pull Docker image
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker pull "${{ secrets.DOCKER_USERNAME }}/your-image-name:latest"
 
       - name: Remove Old Container
         run: docker rm -f depp-app || true
