--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
 #        run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
       - name: Pull Docker image
         run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker pull "${{ secrets.DOCKER_USERNAME }}/your-image-name:latest"
 
       - name: Remove Old Container
