--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Pull Docker image
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker pull "${{ secrets.DOCKER_USERNAME }}/your-image-name:latest"
+          docker pull "${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest"
 
       - name: Remove Old Container
         run: docker rm -f depp-app || true
