--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,17 +41,10 @@ jobs:
 
 
   deploy:
-    runs-on: another
+    runs-on: [another]
     needs: build
     steps:
-#      - name: Set up permissions for Docker socket
-#        run: sudo chmod 666 /var/run/docker.sock
-#
-#      - name: Login to Docker Hub
-#        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-#
-#      - name: Pull Image From DockerHub
-#        run: docker pull ${{ secrets.DOCKER_USERNAME }}/gcpdepp:latest
+
       - name: Pull Docker image
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
