--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build the application
-        run: mvn clean install -DskipTests=true
+        run: |
+          mvn clean
+          mvn -B package -DskipTests=true --file pom.xml
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
@@ -41,7 +43,7 @@ jobs:
 
 
   deploy:
-    runs-on: [another]
+    runs-on: self-hosted
     needs: build
     steps:
 
